# RokkitMC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  install.sh  readme.md
.github/workflows/: cmake.yml
include/: ModLoader.h  PluginLoader.h  definitions.h  hooks.h  logger.h
include/Rokkit/: Certificate.cpp  Certificate.h  Event.cpp  Event.h  Player.cpp  Player.h  Rokkit.h  RokkitServer.h
src/: ModLoader.cpp  PluginLoader.cpp  definitions.h  hooks.cpp  main.cpp
src/Rokkit/: Certificate.cpp  Event.cpp  Player.cpp  RokkitServer.cpp
